crates/tui/snapshots/fullscreen/modal/managed_worktree_deleted_fullscreen.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Project worktrees ────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search worktrees                                                   │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  Session and worktrees deleted.                                         │             
            │  New worktree  ·  Create at HEAD · no session                           │             
            │> repo  ·  Current · main · /repo                                        │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  n New worktree · d delete · / search · Esc close
