crates/tui/snapshots/fullscreen/modal/memories_multiline_editor.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Memories › Edit memory ───────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Personal memories · Memories off                                       │             
            │                                                                         │             
            │  Title                                                                  │             
            │  Fixture decision                                                       │             
            │                                                                         │             
            │> Content                                                                │             
            │  Use Rust                                                               │             
            │  保 留   两 个 空 格                                                          │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > background draft                                                                                
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Tab fields · Ctrl+S save · Esc back
