crates/tui/snapshots/fullscreen/modal/memories_unsaved_draft.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Memories › Unsaved changes ───────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Offline                                                                │             
            │                                                                         │             
            │> Continue editing                                                       │             
            │  Discard changes                                                        │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > background draft                                                                                
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter select · Esc back
